--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -953,7 +953,42 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
   
 }
 
-
+.finish_page {
+  img {width:76px; height:94px; margin:0; display: inline-block; vertical-align: top;}
+  
+  .header { 
+    display: inline-block; 
+    margin-left: 8px; 
+    font-size:65px; 
+    line-height:74px; 
+    margin-top:-6px;
+    
+    .subheader {
+      font-size: 24px;
+      margin-left: 0; 
+      line-height: 21px;
+    }
+  }
+  
+  .metric {
+    display: inline-block; 
+    font-size: 16px;  
+    width: 182px; 
+    
+    .score {
+      font-size: 50px; 
+      line-height: 50px;
+    } 
+  } 
+ 
+  #metrics_faq {
+    margin-top: 10px; 
+    margin-left: 10px; 
+    
+    span { font-weight: bold; }
+    ul { margin-top: -10px; } 
+  }
+}
 
 
 
