--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -206,7 +206,7 @@
       
       $editor.find(".step4 a.restart").click(function(){
         $editor.find(".step4").hide();
-        $editor.find(".step1").find("input[type=text],textarea").val("");
+        $editor.find(".step1").find("input[type=text],textarea[]").val("");
         $editor.find(".step1").show();
         $editor.parents(".headlines").find(".exit").show();
       });
@@ -233,8 +233,11 @@
     editor.setTheme("ace/theme/github");    
     editor.getSession().setUseSoftTabs(true);
     editor.getSession().setTabSize(2);
-    var $textarea = $('textarea[name="content"]').hide();
+    var $textarea = $('textarea[name="task[template]"]').hide();
     editor.getSession().setValue($textarea.val());
+    editor.getSession().on('change', function(){
+      $textarea.val(editor.getSession().getValue());
+    });
     
     $('#points-tt1').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
     $('#points-tt2').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
