small copy change on finish

--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -36,7 +36,7 @@
           %p
             %span What's a MetaScore?
             %br
-            Your MetaScore is a measurement of how good you are at a specific Challenge. 
+            Your MetaScore is a Challenge-specific measurement of how good you are at that skill.
             It's based on how well you perform in all areas of a Challenge. 
             We take into account a bunch of variables such as question difficulty, response time, and breadth of questions taken.
           %p
