--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -49,29 +49,6 @@
   
   .row
     .span5
-      - if false
-        .leftbox{ }
-          .box_header  You may know
-          .leftboxfooter{style:"background-color:white; padding-top: 10px; "}
-            %ul.invite_tiles
-              %li
-                %img{ src: "http://www.placekitten.com/80/80" }
-                %div
-                  %h5 Nathaniel Sokoll-Ward
-                  %span San Francisco
-                  %a.button.button-info Invite
-              %li.invite_tile
-                %img{ src: "http://www.placekitten.com/90/80" }
-                %div
-                  %h5 Jonathan Kirst
-                  %span Tokyo
-                  %a.button.button-info Invite
-              %li.invite_tile
-                %img{ src: "http://www.placekitten.com/60/80" }
-                %div
-                  %h5 Becca Lee
-                  %span New York City
-                  %a.button.button-info Invite
       - if @similar_paths
         .leftbox
           .box_header Similar Challenges
@@ -137,7 +114,7 @@
             = link_to "Newest", challenge_path(@path.permalink, order: "newest"), class: "btn midbtn"
             - if current_user
               = link_to "Following", challenge_path(@path.permalink, order: "following"), class: "btn midbtn"
-            = link_to "Top", challenge_path(@path.permalink, order: "top"), class: "btn rightbtn"
+            = link_to "Hall of Fame", challenge_path(@path.permalink, order: "halloffame"), class: "btn rightbtn"
         :javascript
           $.ajax({ type: "GET", url: "#{@url_for_newsfeed}", success: function(data){ $(".empty_post").replaceWith(data); } });
         %div.post.empty_post{ style: "height: 5px;"}
