error pages updated

--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -1,5 +1,5 @@
 #profile
-  - if @user == current_user && current_user.guest_user?
+  - if @user == current_udfser && current_user.guest_user?
     .help_box
       :javascript
         function append_error(e){
