--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -1,5 +1,5 @@
 #profile
-  - if @user == current_udfser && current_user.guest_user?
+  - if @user == current_user && current_user.guest_user?
     .help_box
       :javascript
         function append_error(e){
@@ -63,42 +63,6 @@
                 .lo Followers
           .span7{style: "min-height: 65px; vertical-align: top; margin: 8px 0 0 0; width: 600px;"}
             %h1= @user.name
-            - if false
-              <a href="#hover_card" role="button" class="btn" data-toggle="modal">Launch hovercard</a>
-              #hover_card.modal.hide.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", :role => "dialog", :tabindex => "-1"}
-                .header
-                  %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
-                  .picture
-                    = link_to profile_path(@user.username) do
-                      = image_tag @user.picture, alt: "#{@user.name}"
-                  .stats
-                    = link_to profile_path(@user.username) do
-                      %h1= @user.name                    
-                    - if badge = User.reputation_badge(@user.earned_points)
-                      = image_tag badge[0], class: "rep_badge", title: badge[1], alt: badge[1]
-                    %p= truncate(@user_personas.collect{|up| up.persona.name }.join(" | "), length: 70)
-                    .social_stats
-                      .stat
-                        #modal_following_count.hi= @user.following_count
-                        .lo Following  
-                      - unless @user == current_user 
-                        #modal_following_box
-                          = link_to "Following", follow_user_path(@user.username), id: "modal_unfollow_button", class: "button button-info", remote: true, style: ("display:none" unless current_user.following?(@user))
-                          = link_to "Follow", follow_user_path(@user.username), id: "modal_follow_button", class: "button button-actionable", remote: true, style: ("display:none" if current_user.following?(@user))   
-                      .stat
-                        #modal_follower_count.hi= @user.follower_count
-                        .lo Followers                  
-                .body
-                  - @enrollments.first(3).each do |enrollment|
-                    %li
-                      = image_tag enrollment.path.picture
-                      %div
-                        %h4 #{truncate(enrollment.path.name, length: 19)}, Level #{enrollment.level}
-                        %span.pts #{enrollment.total_points} points
-                        %span ·
-                        %span Rank: #{enrollment.rank} of **Total path enrollment**
-                .footer
-                  = link_to "View full profile.", profile_path(@user.username)
             - if badge = User.reputation_badge(@user.earned_points)
               = image_tag badge[0], class: "rep_badge", title: badge[1], alt: badge[1]
             - unless @user.description.blank?
@@ -203,7 +167,7 @@
               - if @similar_people.empty?
                 %p{ style: "padding: 10px 10px 10px 0;" } Truly, there is no equal for this person. Unique in every sense of the word.
               - @similar_people.each do |person|
-                = link_to profile_path(person.username) do
+                = link_to hovercard_user_path(person.username), class: "hovercard_link", remote: true do
                   = image_tag person.picture, size: "50x50", title: person.name, alt: person.name
         
         
@@ -332,6 +296,4 @@
     $(this).hide(); $("#modal_unfollow_button").show().addClass("button-info").text("Following");
     $("#modal_follower_count").text(parseInt($("#modal_follower_count").text())+1);
     $("#modal_unfollow_button").removeClass("disabled").removeAttr("disabled");
-  }); 
-  
-  $('#TestHoverCard').modal(options)
+  });
