--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -171,8 +171,28 @@
 	}
 }
 
-#hover_card {
-  width: 35%;
+#hover_card {  
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  
+  #hover_card_holder { 
+    width: 80%;
+    margin: 0 auto; 
+    background-color: #ffffff;
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    outline: none;
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+  }
   
   .header {
     border-bottom: 1px solid rgba(0,0,0,.1);
@@ -188,10 +208,15 @@
       position: relative;      
     }  
     .stats {
+      a { text-decoration: none; }
       h1 { font-size: 28px; color: white; }  
-      p { font-size: 14px; margin: 5px 0; color: rgb(80, 80, 80); color: rgb(194, 194, 194); }
+      p { font-size: 13px; margin: 0; color: #919191; }
+      
+      .rep_badge { margin:0; }
       
       .social_stats{
+        margin-top: 10px;
+        
         #modal_following_box { 
           display: inline-block;
           vertical-align: top;  
@@ -201,10 +226,11 @@
           
         }
         .stat { 
+          display: inline-block; 
           margin: 0 15px;
           float: none; 
           
-          .hi { color: rgb(194, 194, 194); }
+          .hi { color: rgb(194, 194, 194); font-size: 22px; }
           .lo{ color: rgb(145, 145, 145); }
         }
       }      
@@ -226,6 +252,7 @@
       
       img {height:45px; width: 45px; border-radius: 3px; display: inline-block; vertical-align: top; }
       div { 
+        margin-left: 4px;
         display: inline-block;  
         
         h4 { font-size: 16px; margin-bottom: 4px; font-weight: bold;  }
