--- a/app/views/users/_hovercard.haml
+++ b/app/views/users/_hovercard.haml
@@ -15,7 +15,7 @@
           .stat
             #modal_following_count.hi= @user.following_count
             .lo Following  
-          - unless @user == current_user 
+          - unless current_user.nil? or @user == current_user 
             #modal_following_box
               = link_to "Following", follow_user_path(@user.username), id: "modal_unfollow_button", class: "button button-info", remote: true, style: ("display:none" unless current_user.following?(@user))
               = link_to "Follow", follow_user_path(@user.username), id: "modal_follow_button", class: "button button-actionable", remote: true, style: ("display:none" if current_user.following?(@user))   
