removed editor from create

--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -37,6 +37,8 @@ $success_color: #62c462;
     .step2 {
       .btn-group { opacity: .7; margin: 6px 0 15px;  }
       .tip { margin-top: 6px; display: inline-block; }
+      
+      textarea { width: 98%;}
     }
     .step3 {
       h4 { margin-top: 12px; font-size: 14px; }
