finish page for people who have only completed one round

--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -1,6 +1,9 @@
 :css
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
   .quizcontainer { width: 650px; margin-top: 50px;}
+  
+- if @enrollment.completed_tasks.size < 9
+  - sample = true
 %div.quizcontainer.finish_page
   %div.quizspace
     %div
@@ -11,14 +14,27 @@
           You just earned <strong>#{@total_session_points} points</strong> in this section!
       %hr
       %div{ style: "text-align: center;"}
-        .metric{ style: "float: left;" }
-          .score= @enrollment.metascore
-          %div
-            Your #{truncate(@path.name, length: 25, separator: ' ')} MetaScore
-        .metric{ style: "margin: 0 8px;"}
-          .score= "#{@enrollment.metapercentile}%"
-          %div
-            Your percentile ranking 
+        - if sample
+          %div{ style: "background-color: whitesmoke; display: inline-block; width: 293px; margin-right: 10px; border: 1px solid rgba(0,0,0,.1);"}
+            %h4 
+            .metric
+              .score= "?"
+              %div
+                Your #{truncate(@path.name, length: 25, separator: ' ')} MetaScore
+            .metric{ style: "margin: 0 8px;"}
+              .score= "?"
+              %div
+                Your percentile ranking 
+            %div{ style: "text-transform: uppercase; font-size: 10px; font-weight: bold;"} (Need more data)
+        - else
+          .metric
+            .score= @enrollment.metascore
+            %div
+              Your #{truncate(@path.name, length: 25, separator: ' ')} MetaScore
+          .metric{ style: "margin: 0 8px;"}
+            .score= "#{@enrollment.metapercentile}%"
+            %div
+              Your percentile ranking 
         .metric{ style: "border-left: 1px solid rgba(0,0,0,0.1); padding: 0 8px;" }
           .score= @enrollment.total_points
           %div
@@ -29,7 +45,10 @@
             Your #{truncate(@path.name, length: 25, separator: ' ')} level
       %div{ style: "margin-top: 25px;"}
         %div{ style: "text-align: center; "}
-          %p Remember, you'll always have opportunities to improve your scores.
+          - if sample
+            %p{ style: "font-size: 15px; "} Complete <strong>one more section</strong> to discover your percentile and MetaScore.
+          - else
+            %p Remember, you'll always have opportunities to improve your scores.
           %a{"data-target" => "#metrics_faq", "data-toggle" => "collapse", :type => "button", style: "text-align: center; "}
             Learn more about these metrics...
         #metrics_faq.collapse
@@ -68,7 +87,7 @@
             If your percentile has flat-lined, then it's best to spend some time getting better at the Challenge topic and then come back to MetaBright later to re-evaluate your skills.
       
       - if @sample
-        %div{ style: "margin: 15px 0 0 0; text-align: center;" }
+        %div{ style: "margin: 5px 0 0 0; text-align: center;" }
           = link_to "Continue", finish_section_path(@section, @session_id, s: 0), class: "button button-actionable"
       - else
         %div{ style: "margin: 15px 0 0 0;"}
