--- a/app/views/tasks/_task.html.haml
+++ b/app/views/tasks/_task.html.haml
@@ -32,6 +32,8 @@
       %blockquote{ style: "margin-top:0px; width:77%;" }
         %pre{ style:"word-break:normal;" }= task.template
   %div{ style: "position: relative; bottom: 0px; margin-left: 45px; font-size: 11px;"}
+    - unless task.topic_id.nil?
+      %span Topic: #{task.topic.name}
     - unless task.resource.blank?
       = link_to "Source: "+task.resource_title, task.resource, target: "_blank"
   
