--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -48,6 +48,8 @@
           - if sample
             %p{ style: "font-size: 15px; "} Complete <strong>one more section</strong> to discover your percentile and MetaScore.
           - else
+            %p= @correct_topics
+            %p= @incorrect_topics
             %p Remember, you'll always have opportunities to improve your scores.
           %a{"data-target" => "#metrics_faq", "data-toggle" => "collapse", :type => "button", style: "text-align: center; "}
             Learn more about these metrics...
