--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -954,7 +954,7 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
 }
 
 .finish_page {
-  img {width:76px; height:94px; margin:0; display: inline-block; vertical-align: top;}
+  img {width:85px; height:116px; margin:0; display: inline-block; vertical-align: top;}
   
   .header { 
     display: inline-block; 
@@ -964,11 +964,20 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
     margin-top:-6px;
     
     .subheader {
-      font-size: 24px;
+      font-size: 23px;
       margin-left: 0; 
-      line-height: 21px;
+      line-height: 16px;
+    }
+    
+    .session_details { 
+      font-size: 12px; 
+      line-height: 33px; 
+      
+      span { font-weight: bold; }
     }
   }
+  
+  hr { margin-top: 15px; }
   
   .metric {
     display: inline-block; 
