--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -328,8 +328,8 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 #answer_preview .image_preview { height: 200px;  width: inherit; max-width: inherit; }
 .add_caption .text { font-size: 14px; cursor: pointer; vertical-align: top; }
 .add_caption .caret { border-top-color: #0088cc; border-bottom-color: #0088cc; vertical-align: bottom; }
-#editor { border: 1px solid #CCC; }
-#editor div, #editor span { font-size: 13px; font-family: 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace !important; }
+#editor, .ace_editor { border: 1px solid #CCC; }
+#editor div, #editor span, .ace_editor div, .ace_editor span { font-size: 13px; font-family: 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace !important; }
 .ace_gutter { border-right: 1px solid #CCC; }
 
 
